--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
+        "stdio.h": "c",
+        "logger.h": "c",
         "nidaqmx.h": "c",
-        "arg_parser.h": "c",
-        "stdio.h": "c"
+        "arg_parser.h": "c"
     }
 }
