--- a/code/src/Makefile.win
+++ b/code/src/Makefile.win
@@ -1,29 +1,32 @@
-INCLUDE_DIR =..\include
-BIN_DIR = .\bin
+INCLUDE_DIR =../include
+BIN_DIR = ./bin
+
+NIDAQLIB_DIR="C:/Program\ Files\ (x86)/National\ Instruments/NI-DAQ/DAQmx\ ANSI\ C\ Dev/include"
+NIDAQLIB_NAME="nidaqmx"
 
 CC=gcc
 
-CFLAGS=-I$(INCLUDE_DIR)
+CFLAGS=-I$(INCLUDE_DIR) -L ${NIDAQLIB_DIR} -l ${NIDAQLIB_NAME}
 
-OBJ_DIR=.\obj
+OBJ_DIR=./obj
 
 _DEPS = stimseq.h
-DEPS = $(patsubst %,$(INCLUDE_DIR)\%,$(_DEPS))
+DEPS = $(patsubst %,$(INCLUDE_DIR)/%,$(_DEPS))
 
-_OBJ = stimseq.o arg_parser.o logger.o sequence_parser.o
-OBJ = $(patsubst %,$(OBJ_DIR)\%,$(_OBJ))
+_OBJ = stimseq.o arg_parser.o logger.o sequence_parser.o sequence_loader.o
+OBJ = $(patsubst %,$(OBJ_DIR)/%,$(_OBJ))
 
 
-$(OBJ_DIR)\%.o: %.c $(DEPS)
+$(OBJ_DIR)/%.o: %.c $(DEPS)
 	mkdir -p $(OBJ_DIR)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-$(BIN_DIR)\stimseq: $(OBJ)
+$(BIN_DIR)/stimseq: $(OBJ)
 	mkdir -p $(BIN_DIR)
 	$(CC) -o $@ $^ $(CFLAGS) 
 
 .PHONY: clean
 
 clean:
-	rm -f $(OBJ_DIR)\* *~ core $(INCDIR)\*~ 
-	rm -f $(BIN_DIR)\* *~ core $(INCDIR)\*~ 
+	rm -f $(OBJ_DIR)/* *~ core $(INCDIR)/*~ 
+	rm -f $(BIN_DIR)/* *~ core $(INCDIR)/*~ 
