makefile for windaube

--- a/code/src/Makefile.win
+++ b/code/src/Makefile.win
@@ -1,12 +1,13 @@
 INCLUDE_DIR =../include
 BIN_DIR = ./bin
 
-NIDAQLIB_DIR="C:/Program\ Files\ (x86)/National\ Instruments/NI-DAQ/DAQmx\ ANSI\ C\ Dev/include"
-NIDAQLIB_NAME="C:/Program\ Files\ (x86)/National\ Instruments/Shared/ExternalCompilerSupport/C/lib64/gcc/libnidaqmx.so"
+NIDAQLIB_DIR="/c/Program Files (x86)/National Instruments/Shared/ExternalCompilerSupport/C/lib64/msvc"
+NIDAQLIB_NAME=NIDAQmx
+NIDAQLIB_HEADER="/c/Program Files (x86)/National Instruments/NI-DAQ/DAQmx ANSI C Dev/include"
 
 CC=gcc
 
-CFLAGS=-I$(INCLUDE_DIR) -L ${NIDAQLIB_DIR} -l ${NIDAQLIB_NAME}
+CFLAGS=-I$(INCLUDE_DIR) -I$(NIDAQLIB_HEADER) -L${NIDAQLIB_DIR} -l${NIDAQLIB_NAME}
 
 OBJ_DIR=./obj
 
