bug fixes after tests on hardware

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "logger.h": "c",
         "nidaqmx.h": "c",
         "arg_parser.h": "c",
-        "sequence_parser.h": "c"
+        "sequence_parser.h": "c",
+        "format": "c",
+        "cstdlib": "c"
     }
 }
